Added Product Details razor UI page

--- a/BlazorECommerce/Client/Shared/ProductList.razor
+++ b/BlazorECommerce/Client/Shared/ProductList.razor
@@ -15,7 +15,7 @@ else
                     </a>
                 </div>
                 <div class="media-body">
-                    <a href="#">
+                    <a href="/product/@product.id">
                         <h4 class="mb-0">@product.title</h4>
                     </a>
                     <p>@product.description</p>
