Added Product Service in client

--- a/BlazorECommerce/Client/Pages/ProductDetails.razor
+++ b/BlazorECommerce/Client/Pages/ProductDetails.razor
@@ -3,7 +3,7 @@
 
 @if(product == null)
 {
-    <span>Loading Product...</span>
+    <span>@message</span>
 }
 else
 {
@@ -22,13 +22,23 @@ else
 }
 @code {
     private Product? product = null;
+    private string message = string.Empty;
 
     [Parameter]
     public int Id { get; set; }
 
     protected override async Task OnParametersSetAsync()
     {
-        product = ProductService.Products.Find(p => p.id == Id);
+        message = "Loading Product...";
+        var result = await ProductService.GetProduct(Id);
+        if (!result.success)
+        {
+            message = result.Message;
+        }
+        else
+        {
+            product = result.Data;
+        }
     }
 
 }
