--- a/BlazorECommerce/Client/Pages/ProductDetails.razor.css
+++ b/BlazorECommerce/Client/Pages/ProductDetails.razor.css
@@ -15,7 +15,20 @@
     color: green;
 }
 
+.media {
+    display: flex;
+    align-items: flex-start;
+}
+
+.media-body {
+    flex: 1;
+}
+
 @media (max-width: 1023.98px) {
+    .media{
+        flex-direction: column;
+    }
+
     .media-img {
         max-width: 300px;
     }
